--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -31,8 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  coast_audio: ^0.0.2+1
-  flutter_coast_audio_miniaudio: ^0.0.1
+  coast_audio: ^0.0.3
+  flutter_coast_audio_miniaudio: ^0.0.2
   file_picker: ^5.3.4
   coast_audio_native_codec:
     # When depending on this package from a real application you should use:
