--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,11 +23,12 @@ rootProject.allprojects {
 }
 
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 android {
     // Bumping the plugin compileSdkVersion requires all clients of this plugin
     // to bump the version in their app.
-    compileSdkVersion 31
+    compileSdk 31
 
     // Bumping the plugin ndkVersion requires all clients of this plugin to bump
     // the version in their app and to download a newer version of the NDK.
@@ -54,6 +55,11 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 16
+        minSdk 24
+        proguardFiles 'proguard-rules.pro'
     }
+}
+
+dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
